# fetch-local-emails

./: README.md  extract_emails.py  pyproject.toml  thunderbird_email_mcp.py
tests/: test_extract_emails.py  test_thunderbird_email_mcp.py
tests/fixtures/thunderbird_profile/ImapMail/mail.example.invalid/: INBOX
